Refactor project structure and update dependencies
- Rename package from "Todo-Rust" to "todo_rust"
- Add new dependencies: anyhow, async-trait, and futures
- Remove unused MongoDB connector and related models
- Implement new MongoConnector and models for Task and User
- Update repository traits and services structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Todo-Rust"
+name = "todo_rust"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,8 +8,11 @@ actix-web = "4.11.0"
 derive_more = "2.0.1"
 env_logger = "0.11.8"
 log = "0.4.28"
-mongodb = "3.3.0"
 serde = "1.0.228"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 uuid = "1.18.1"
+anyhow = "1.0.75"
+async-trait = "0.1.74"
+futures = "0.3"
+mongodb = "3.3.0"
